force-app/main/default/objects/Partida_Orden_Compra__c/Partida_Orden_Compra__c.object-meta.xml
<CustomObject>
    <label>Partida de Orden de Compra</label>
    <nameField>
        <displayFormat>POC-{00000}</displayFormat>
        <label>Numero de Partida OC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partidas de Orden de Compra</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>