force-app/main/default/objects/Partida_Orden_Compra__c/fields/Costo_Unitario__c.field-meta.xml
<CustomField>
    <fullName>Costo_Unitario__c</fullName>
    <label>Costo Unitario</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>4</scale>
</CustomField>