force-app/main/default/objects/Partida_Orden_Compra__c/fields/Orden_Compra__c.field-meta.xml
<CustomField>
    <fullName>Orden_Compra__c</fullName>
    <label>Orden de Compra</label>
    <type>MasterDetail</type>
    <referenceTo>Orden_Compra__c</referenceTo>
    <relationshipLabel>Partidas de Orden de Compra</relationshipLabel>
    <relationshipName>Partidas_Orden_Compra</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>