force-app/main/default/objects/Partida_Orden_Compra__c/fields/Partida_Cotizacion__c.field-meta.xml
<CustomField>
    <fullName>Partida_Cotizacion__c</fullName>
    <label>Partida de Cotizacion</label>
    <type>Lookup</type>
    <referenceTo>Partida_Cotizacion__c</referenceTo>
    <relationshipLabel>Partidas de Orden de Compra</relationshipLabel>
    <relationshipName>Partidas_Orden_Compra</relationshipName>
</CustomField>