force-app/main/default/objects/Partida_Orden_Compra__c/fields/Unidad__c.field-meta.xml
<CustomField>
    <fullName>Unidad__c</fullName>
    <label>Unidad</label>
    <type>Text</type>
    <length>50</length>
</CustomField>